--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -20,7 +20,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - ✒️🔢 **Full Markdown and LaTeX Support**: Elevate your LLM experience with comprehensive Markdown and LaTeX capabilities for enriched interaction.
 
-- 🧩 **Model Builder**: Easily create Ollama models directly from Open WebUI. Create and add custom characters/agents, customize chat elements, and import models effortlessly through [Open WebUI Community](https://openwebui.com/) integration.
+- 🧩 **Model Builder**: Easily create Ollama models directly from Open WebUI. Create and add custom characters and agents, customize chat elements, and import models effortlessly through [Open WebUI Community](https://openwebui.com/) integration.
 
 - 📚 **Local and Remote RAG Integration**: Dive into the future of chat interactions and explore your documents with our cutting-edge Retrieval Augmented Generation (RAG) technology within your chats. Documents can be loaded into the workspace area, after which they can be accessed using the `#` symbol before a query, or by starting the prompt with `#`, followed by a URL for web content integration.
 
@@ -139,7 +139,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 📚 **Knowledge Support for Models**: The ability to attach functions and documents directly to models from the models workspace enhances the information available to each model.
 
-- 🗂️ **Model Presets**: Create and manage model presets for both the Ollama/OpenAI API.
+- 🗂️ **Model Presets**: Create and manage model presets for both the Ollama and OpenAI API.
 
 - 🏷️ **Model Tagging**: The models workspace enables users to organize their models using tagging.
 
@@ -155,17 +155,17 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - ⬆️ **GGUF File Model Creation**: Effortlessly create Ollama models by uploading GGUF files directly from Open WebUI from the `Admin Settings` > `Settings` > `Model` > `Experimental` menu. The process has been streamlined with the option to upload from your machine or download GGUF files from Hugging Face.
 
-- ⚙️ **Default Model Setting**: The default model can be set in the `Settings` > `Interface` menu on mobile devices, or can more easily be set in a new chat under the model selector dropdown on desktop PCs and laptops.
+- ⚙️ **Default Model Setting**: The default model preference for new chats can be set in the `Settings` > `Interface` menu on mobile devices, or can more easily be set in a new chat under the model selector dropdown on desktop PCs and laptops.
 
 - 💡 **LLM Response Insights**: Details of every generated response can be viewed, including external model API insights and comprehensive local model info.
 
 - 📥🗑️ **Download/Delete Models**: Models can be downloaded or deleted directly from Open WebUI with ease.
 
-- 🔄 **Update All Ollama Models**: A convenient button allows users to update locally installed models in one operation, streamlining model management.
+- 🔄 **Update All Ollama Models**: A convenient button allows users to update all their locally installed models in one operation, streamlining model management.
 
 - 🍻 **TavernAI Character Card Integration**: Experience enhanced visual storytelling with TavernAI Character Card Integration in our model builder. Users can seamlessly incorporate TavernAI character card PNGs directly into their model files, creating a more immersive and engaging user experience.
 
-- 🎲 **Model Playground (Beta)**: Try out models in a sandbox environment with the model playground area (`beta`), which enables users to test and explore model capabilities and parameters with ease in a sandbox environment before deployment in a live chat environment.
+- 🎲 **Model Playground (Beta)**: Try out models with the model playground area (`beta`), which enables users to test and explore model capabilities and parameters with ease in a sandbox environment before deployment in a live chat environment.
 
 ---
 
@@ -184,13 +184,13 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 📜 **Chat History**: Access and manage your conversation history with ease via the chat navigation sidebar. Toggle off chat history in the `Settings` > `Chats` menu to prevent chat history from being created with new interactions.
 
-- 🔄 **Regeneration History Access**: Easily revisit and explore your entire regeneration history.
+- 🔄 **Regeneration History Access**: Easily revisit and explore your entire LLM response regeneration history.
 
 - 📬 **Archive Chats**: Effortlessly store away completed conversations you've had with models for future reference or interaction, maintaining a tidy and clutter-free chat interface.
 
 - 🗃️ **Archive All Chats**: This feature allows you to quickly archive all of your chats at once.
 
-- 📦 **Export All Archived Chats as JSON**: This features enables users to easily export all their archived chats in a single JSON file, which can be used for backup or transfer purposes.
+- 📦 **Export All Archived Chats as JSON**: This feature enables users to easily export all their archived chats in a single JSON file, which can be used for backup or transfer purposes.
 
 - 📄 **Download Chats as JSON/PDF/TXT**: Easily download your chats individually in your preffered format of `.json`, `.pdf`, or `.txt` format.
 
