--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -295,7 +295,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
     |--------------|---------------------|
     | WebUI    | /api/v1/docs        | 
     | Ollama   | /ollama/docs        |
-    | OpenAI   | /openai/api/docs    | 
+    | OpenAI   | /openai/docs        | 
     | Images   | /images/api/v1/docs | 
     | Audio    | /audio/api/v1/docs  |
     | RAG      | /rag/api/v1/docs    |
