--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -222,6 +222,8 @@ npm run build
 
 # Serving Frontend with the Backend
 cd ./backend
+python -m venv
+./venv/Scripts/activate
 pip install -r requirements.txt -U
 bash start.sh
 ```
