--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -223,7 +223,7 @@ npm run build
 # Serving Frontend with the Backend
 cd ./backend
 
-# Optional, you can enable venv with to avoid pollute system packages
+# Optional, you can enable venv with to avoid collision with the system wide packages
 # python -m venv
 # ./venv/Scripts/activate
 
