--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -13,6 +13,12 @@ Here are some exciting tasks on our roadmap:
 - 🛡️ **Granular Permissions and User Groups**: Empower administrators to finely control access levels and group users according to their roles and responsibilities. This feature ensures robust security measures and streamlined management of user privileges, enhancing overall platform functionality.
 - 🔧 **Fine-tune Model (LoRA)**: Fine-tune your model directly from the user interface. This feature allows for precise customization and optimization of the chat experience to better suit your needs and preferences.
 - 📚 **Enhanced Documentation**: Elevate your setup and customization experience with improved, comprehensive documentation.
+- 🧑‍🤝‍🧑 **Teams Feature - Better User Management**: Enhance team collaboration and efficiency with improved user management features that streamline workflows and improve communication.
+- 📁 **Projects Feature - Better Documents Section**: Organize and manage project documentation more effectively, with enhanced tools and interfaces for easier access and better collaboration.
+- 📣 **Wakeword Detection**: Integrate voice activation features to improve accessibility and hands-free interaction within your platform.
+- 💻 **Better Code Execution**: Enable sophisticated coding capabilities including file uploads, using external libraries, and executing multiple programming languages within the platform.
+- 🤖 **Code Interpreter Function**: Implement a versatile code interpreter to enhance development processes and support various coding needs directly within the platform.
+- 💬 **"Discussions" Feature - Multi-user Native Solution with AI Chat**: Foster engaging and productive discussions among users with a multi-user chat feature that incorporates AI to improve communication and problem-solving.
 
 ### 🧑‍🔬 Research Tools
 
