--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -1,3 +1,8 @@
+---
+sidebar_position: 1
+title: "Pipelines"
+---
+
 import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
