--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-title: "Pipelines"
+title: "⚡ Pipelines"
 ---
 
 import { TopBanners } from "@site/src/components/TopBanners";
